[package]
name = "HypeDown"
version = "0.1.0"
authors = ["TheSirC <clocloranely@hotmail.fr>"]

[lib]
name = "libsnatch"
path = "src/lib.rs"

[dependencies]
json = "*"
stopwatch = "0.0.7"
ansi_term = "0.9.0"
clap = "2.20.0"
hyper = "0.10"
pbr = "1.0.0-alpha.2"
num_cpus = "1.0"
scraper = "0.4.0"
hyper-native-tls = "0.2.2"
