[package]
authors = ["TheSirC <clocloranely@hotmail.fr>"]
name = "hype_down"
version = "0.1.0"
edition = "2018"
[dependencies]
futures = "*"
http = "*"
hyper = "*"
hyper-tls = "*"
parallel-getter = "*"
reqwest = "*"
serde = {version = "1.0", features = ["derive"]}
serde_json = "*"
scraper = "*"
structopt = "*"
